# tcc

./: .gitignore  analysis_data.py  generate_graphs.py  generate_tables.py  main.py  outliers.txt  output.csv  output.txt  output1.txt  pyproject.toml  saida.xlsx  to_excel.py
files/: miplib2017-selected.csv  results.csv
utils/: __init__.py  fileio.py  preprocessing.py  processing.py
