[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["Yuri Dimitre Dias de Faria <yuri.faria@enacom.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
openpyxl = "^3.1.2"
gdown = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
